--- a/index.html
+++ b/index.html
@@ -46,10 +46,32 @@
               <input type="text" id="asal" name="Asal" required /><br /><br />
               <input id="submit-btn" class="btn" type="submit" value="Submit" />
             </form>
+            <p>dataa ku dibawahh scroll ajaa</p>
           </div>
         </div>
       </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#a79277"
+          fill-opacity="1"
+          d="M0,192L48,192C96,192,192,192,288,176C384,160,480,128,576,128C672,128,768,160,864,181.3C960,203,1056,213,1152,213.3C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </main>
+
+    <section>
+      <h1>NRP : 5025231224</h1>
+      <br />
+      <h1>Nama : Ryan Wiratara prasetyo</h1>
+      <br />
+      <h1>TTL : Tuban, 04 Januari 2005</h1>
+      <br />
+      <h1>Hobi : Cari Penyakit</h1>
+      <br />
+      <h1>Asal : Batu</h1>
+      <br />
+    </section>
 
     <script>
       document
